<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/taskFragment"
        android:icon="@drawable/ic_tasks"
        android:title="@string/nav_tasks"/>
    <item
        android:id="@+id/pomodoroFragment"
        android:icon="@drawable/ic_pomodoro"
        android:title="@string/nav_pomodoro"/>
    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_calendar"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile"/>
</menu>
